# wcf-client-rust

./: .env.dev  .env.prod  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build-ci.yml  release.yml  rust-release.yml
src/: App.vue  components.d.ts  index.html  index.html.bak  main.js  main.ts  styles.css.bak  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  config.json5  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: endpoints.rs  http_server.rs  lib.rs  main.rs  wechat_config.rs
src-tauri/src/handler/: event_entity.rs  mod.rs  msg_event_mgr.rs  startup_event_mgr.rs
src-tauri/src/handler/message/: console_message_handler.rs  event_message_handler.rs  http_message_handler.rs  log_message_handler.rs  mod.rs  socketio_message_handler.rs
src-tauri/src/handler/startup/: http_server_handler.rs  mod.rs  service_handler.rs
src-tauri/src/service/: global_service.rs  http_server_service.rs  mod.rs  msg_event_mgr.rs  socketio_service.rs  wechat_service.rs
src-tauri/src/service/message/: console_message_handler.rs  event_entity.rs  http_message_handler.rs  log_message_handler.rs  mod.rs
src-tauri/src/wcferry/: mod.rs  roomdata.rs  wcf.rs
src-tauri/src/wcferry/lib/: DISCLAIMER.md  roomdata.proto
src/api/: wcf_api.js  wcf_api.ts
src/command/: wcf.js
src/components/: 404.vue  Home.vue  Setting.vue  Sql.vue  Tools.vue
src/components/ace/: vace.config.js
src/components/layouts/: BaseHeader.vue
src/components/tools/: JsonFormat.vue  XmlFormat.vue
src/directives/ripple/: index.scss  index.ts
src/router/: index.ts
src/store/: index.ts
src/store/modules/: config.ts  vconsole.ts  wechat.ts
src/styles/: index.scss
src/styles/element/: dark.scss  index.scss
src/types/: config.d.ts
src/utils/http/: index.ts  types.d.ts
src/utils/progress/: index.ts
