[package]
name = "wcfrust"
version = "0.1.0"
description = "A Rust client for WeChatFerry"
authors = ["Changhua"]
license = "MIT"
repository = "https://github.com/lich0821/wcf-client-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
