[package]
name = "wcfrust"
version = "39.4.2-0"
description = "A HTTP (Rust) client for WeChatFerry"
authors = ["Changhua"]
license = "MIT"
repository = "https://github.com/lich0821/wcf-client-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.6"
tauri-build = { version = "1", features = [] }

[dependencies]
log = "0.4"
nng = "1.0.1"
warp = "0.3"
utoipa = "4"
utoipa-swagger-ui = "6"
base64 = "0.13"
chrono = "0.4"
prost = "0.11.6"
libloading = "0.8"
env_logger = "0.9"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
winapi = { version = "0.3", features = [
    "errhandlingapi",
    "winuser",
    "synchapi",
] }
tauri = { version = "1", features = ["api-all", "system-tray"] }
local-ip-address = "0.6.1"
uuid = { version = "1.2", features = ["v4"] }
async-trait = "0.1"
rand = "0.8.5"
ureq = { version = "2.10", features = ["json"] }
rust_socketio = {version = "0.6.0", features = ["async"] }
futures-util = "0.3.31"
regex = "1"
quickxml_to_serde = {version ="0.6.0", features = ["json_types", "regex_path"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
